--- a/src/main/resources/fxml/Editor.fxml
+++ b/src/main/resources/fxml/Editor.fxml
@@ -77,6 +77,13 @@
 
             <Separator/>
             
+            <Button fx:id="btnAddEz" styleClass="activity-button" contentDisplay="GRAPHIC_ONLY" visible="false" managed="false">
+                <tooltip><Tooltip text="Add Element"/></tooltip>
+                <graphic>
+                    <SVGPath content="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" style="-fx-fill: #4CAF50;" scaleX="1.2" scaleY="1.2"/>
+                </graphic>
+            </Button>
+
             <Button fx:id="btnExplorer" styleClass="activity-button" contentDisplay="GRAPHIC_ONLY">
                 <tooltip><Tooltip text="Explorer"/></tooltip>
                 <graphic>
@@ -98,6 +105,14 @@
                         <SVGPath content="M90.156 41.965 50.036 1.848a5.918 5.918 0 0 0-8.372 0l-8.328 8.332 10.566 10.566a7.03 7.03 0 0 1 7.23 1.684 7.034 7.034 0 0 1 1.669 7.277l10.187 10.184a7.028 7.028 0 0 1 7.278 1.672 7.04 7.04 0 0 1 0 9.957 7.05 7.05 0 0 1-9.965 0 7.044 7.044 0 0 1-1.528-7.66l-9.5-9.497V59.36a7.04 7.04 0 0 1 1.86 11.29 7.04 7.04 0 0 1-9.957 0 7.04 7.04 0 0 1 0-9.958 7.06 7.06 0 0 1 2.304-1.539V33.926a7.049 7.049 0 0 1-3.82-9.234L29.242 14.272 1.73 41.777a5.925 5.925 0 0 0 0 8.371L41.852 90.27a5.925 5.925 0 0 0 8.37 0l39.934-39.934a5.925 5.925 0 0 0 0-8.371" 
                                  scaleX="0.2" scaleY="0.2" styleClass="activity-icon"/>
                     </Group>
+                </graphic>
+            </Button>
+
+            <Button fx:id="btnTodo" styleClass="activity-button" contentDisplay="GRAPHIC_ONLY">
+                <tooltip><Tooltip text="To Do List"/></tooltip>
+                <graphic>
+                    <SVGPath content="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm-2 14l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z" 
+                             styleClass="activity-icon" scaleX="0.8" scaleY="0.8"/>
                 </graphic>
             </Button>
             
@@ -296,6 +311,20 @@
                             <Button fx:id="commitButton" text="Commit" maxWidth="Infinity"/>
                         </VBox>
                     </VBox>
+                </VBox>
+
+                <!-- Todo View -->
+                <VBox fx:id="todoView" styleClass="ide-sidebar" spacing="10" visible="false">
+                    <padding>
+                        <Insets top="10" right="10" bottom="10" left="10"/>
+                    </padding>
+                    <Label text="PROJECT TASKS" styleClass="sidebar-section-title">
+                        <font>
+                            <Font name="System Bold" size="11"/>
+                        </font>
+                    </Label>
+                    
+                    <StackPane fx:id="todoContentArea" VBox.vgrow="ALWAYS"/>
                 </VBox>
             </StackPane>
             
