--- a/src/main/resources/fxml/HomeScreen.fxml
+++ b/src/main/resources/fxml/HomeScreen.fxml
@@ -61,7 +61,7 @@
             
             <!-- Buttons Container -->
             <HBox spacing="20" alignment="CENTER">
-                <TextField fx:id="searchField" promptText="Buscar proyectos..." prefWidth="300" style="-fx-font-size: 16px; -fx-background-radius: 20; -fx-padding: 10 20;">
+                <TextField fx:id="searchField" promptText="Buscar proyectos..." prefWidth="300" styleClass="home-search-field">
                     <font>
                         <Font size="16"/>
                     </font>
