--- a/src/main/resources/css/styles.css
+++ b/src/main/resources/css/styles.css
@@ -909,3 +909,16 @@
     -fx-control-inner-background: #1e1e1e;
     -fx-background-color: #1e1e1e;
 }
+
+/* Custom Hover for Mode Switch Button */
+#btnModeSwitch {
+    -fx-background-color: transparent;
+    -fx-padding: 0;
+    -fx-pref-width: 64px;
+    -fx-pref-height: 64px;
+}
+
+#btnModeSwitch:hover {
+    -fx-background-color: #505050;
+    -fx-cursor: hand;
+}
