--- a/src/main/resources/fxml/HomeScreen.fxml
+++ b/src/main/resources/fxml/HomeScreen.fxml
@@ -80,6 +80,14 @@
                         <Font name="System Bold" size="18"/>
                     </font>
                 </Button>
+
+                <Button fx:id="pixelArtButton" text=" Editor PixelArt"
+                        styleClass="create-project-button">
+                    <tooltip><Tooltip text="Editor PixelArt"/></tooltip>
+                    <font>
+                        <Font name="System Bold" size="18"/>
+                    </font>
+                </Button>
             </HBox>
             
 
@@ -116,5 +124,11 @@
             </VBox>
         </VBox>
     </center>
+    
+    <bottom>
+        <HBox alignment="BOTTOM_RIGHT" style="-fx-padding: 5 15 5 5;">
+            <Label text="v1.0.1" style="-fx-text-fill: #808080; -fx-font-size: 12px; -fx-opacity: 0.7;"/>
+        </HBox>
+    </bottom>
     
 </BorderPane>
